--- a/paper/semantics.tex
+++ b/paper/semantics.tex
@@ -2,6 +2,7 @@
 \label{sec:formalization}
 
 \subsection{Operational Semantics}
+\label{sec:opsem}
 
 We formalize our ideas in the context of a lambda calculus ($\lang$)
 shown in Fig.~\ref{fig:opsem}. Expressions of $\lang$ are variables,
