--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -334,6 +334,8 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
 
 \input{system-model}
 
+\input{implementation}
+
 \input{evaluation}
 
 \input{related}
