--- a/paper/model.tex
+++ b/paper/model.tex
@@ -126,7 +126,7 @@ Functions \C{return} and \C{bind} have their usual monadic
 \begin{figure}
 \begin{center}
   \begin{ocaml}
-  module type DALI = sig
+  module type VST = sig
     type ('a, 'b) t
     val return : 'b -> ('a, 'b) t
     val bind : ('a, 'b) t -> ('b -> ('a, 'c) t) -> ('a, 'c) t
