--- a/paper/all.bib
+++ b/paper/all.bib
@@ -1123,3 +1123,8 @@ url="http://dx.doi.org/10.1007/3-540-56596-5_47"
  keywords = {ML, abstract types, distributed programming, marshalling, modules, programming languages, rebinding, serialisation, type theory, version control},
 }
 
+@book(Armstrong,
+  title = {{Programmoing Erlang: Software for a Concurrent World}},
+  author = {Joe Armstrong},
+  publisher = {Pragmatic Bookshelf},
+  year = 2007)
