--- a/paper/all.bib
+++ b/paper/all.bib
@@ -135,6 +135,14 @@
 
 }
 
+@misc{mirage,
+	key = {Mirage},
+	title={{A programming framework for building type-safe, modular systems}},
+	url = {https://mirage.io },
+  note = {Accessed: 2017-01-03 12:21:00},
+  year = {2013}
+}
+
 @misc{RUBiS,
 	key = {RUBiS},
 	title={{Rice University Bidding System}},
@@ -777,7 +785,6 @@ year = {2015},
   note = {Accessed: 2017-01-03 13:00:00},
   year = {2017}
 }
-<<<<<<< Updated upstream
 @inproceedings{malpani10,
   title   = {Reverse engineering models from databases to bootstrap
       application development},
@@ -1122,9 +1129,39 @@ url="http://dx.doi.org/10.1007/3-540-56596-5_47"
  address = {New York, NY, USA},
  keywords = {ML, abstract types, distributed programming, marshalling, modules, programming languages, rebinding, serialisation, type theory, version control},
 }
-
 @book(Armstrong,
   title = {{Programmoing Erlang: Software for a Concurrent World}},
   author = {Joe Armstrong},
   publisher = {Pragmatic Bookshelf},
   year = 2007)
+@inproceedings{wadler-monad,
+	author = {Wadler, Philip},
+	title = {Monads for Functional Programming},
+	booktitle = {Advanced Functional Programming, First International Spring School on Advanced Functional Programming Techniques-Tutorial Text},
+	year = {1995},
+	isbn = {3-540-59451-5},
+	pages = {24--52},
+	numpages = {29},
+	url = {http://dl.acm.org/citation.cfm?id=647698.734146},
+	acmid = {734146},
+	publisher = {Springer-Verlag},
+	address = {London, UK, UK},
+}
+@article{wagner-fischer,
+	author = {Wagner, Robert A. and Fischer, Michael J.},
+	title = {The String-to-String Correction Problem},
+	journal = {J. ACM},
+	issue_date = {Jan. 1974},
+	volume = {21},
+	number = {1},
+	month = jan,
+	year = {1974},
+	issn = {0004-5411},
+	pages = {168--173},
+	numpages = {6},
+	url = {http://doi.acm.org/10.1145/321796.321811},
+	doi = {10.1145/321796.321811},
+	acmid = {321811},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+}
