--- a/paper/all.bib
+++ b/paper/all.bib
@@ -501,8 +501,6 @@ year = {2015},
  address = {New York, NY, USA},
 }
 
-
-
 @inproceedings{BFL+12,
  author = {Burckhardt, Sebastian and F\"{a}hndrich, Manuel and Leijen, Daan and Wood, Benjamin P.},
  title = {{Cloud Types for Eventual Consistency}},
@@ -971,6 +969,27 @@ year = {2015},
 	key={Git},
 	title={{Git: a free and open source distributed version control system}},
 	utl={https://git-scm.com/},
+	note = {Accessed: 2017-01-04 10:12:00},
+	year = {2017},
+}
+@misc{git-tp,
+	key={Git Transfer Protocol},
+	title={{Git Internals -- Transfer Protocols}},
+	utl={https://git-scm.com/book/en/v2/Git-Internals-Transfer-Protocols},
+	note = {Accessed: 2017-01-04 10:12:00},
+	year = {2017},
+}
+@misc{gcp,
+	key={GCP},
+	title={{Google Cloud Platform}},
+	utl={https://cloud.google.com/},
+	note = {Accessed: 2017-01-04 10:12:00},
+	year = {2017},
+}
+@misc{ppx,
+	key={PPX},
+	title={{PPX extension points}},
+	utl={https://ocaml.io/w/PPX},
 	note = {Accessed: 2017-01-04 10:12:00},
 	year = {2017},
 }
