--- a/paper/related.tex
+++ b/paper/related.tex
@@ -5,7 +5,7 @@ Our idea of versioning state bears resemblance to Concurrent
 Revisions~\cite{BBL+10}, a programming abstraction that provides
 deterministic concurrent execution.  The idea of using revisions as a
 means to programming eventually consistent distributed systems was
-further developed in~\cite{BFL+12,BLF+12}.  The
+further developed in~\cite{BFL+12}.  The
 \name\ programming model, however, differs substantially from a
 concurrent revisions model because it imposes no distinction between
 \emph{servers}, machines that hold global state, and \emph{clients},
