--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -1,9 +1,9 @@
 \section{Distributed Instantiation}
 \label{sec:implementation}
 
-We describe the realization of \name programming model on top of a persistent
-distributed store and the language extensions to enable and enforce the
-constraints of the \name.
+We describe the realization of \name on top of a persistent
+distributed store and the language extensions to enable and enforce
+the constraints of the \name.
 
 \name programming model is realized on top of Irmin~\cite{irmin}, an OCaml
 library database implementation that is part of the MirageOS
